Add change for entties and config map and spring cloud feing