@@ -1,5 +1,6 @@
 package com.co.technicaltest.neoris.client.mapper;
 
+import com.co.technicaltest.neoris.client.models.Account;
 import com.co.technicaltest.neoris.client.models.dto.ClientDTO;
 import com.co.technicaltest.neoris.client.models.dto.ClientResponseDTO;
 import com.co.technicaltest.neoris.client.models.entity.Client;
@@ -9,7 +10,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @Mapper(componentModel = MappingConstants.ComponentModel.SPRING,
@@ -18,17 +18,28 @@ public interface ClientMapper {
     Client clientDtoToClient(ClientDTO clientDTO);
 
     @Mapping(source = "clientAccounts", target = "clientAccounts", qualifiedByName = "clientToIdList")
+    @Mapping(source = "accounts", target = "clientAccountsDetail", qualifiedByName = "accountList")
     ClientResponseDTO clientToClientResponseDto(Client client);
 
     Client updateClientDtoToClient(@MappingTarget Client client, ClientDTO clientDTO);
 
     @Named("clientToIdList")
     public static List<Long> convertListIds(List<ClientAccount> clientAccountList) {
-        if(clientAccountList.isEmpty()) Collections.emptyList();
-        return clientAccountList
-                .stream()
-                .map(ClientAccount::getId)
-                .collect(Collectors.toList());
+        if (clientAccountList != null) {
+            return clientAccountList
+                    .stream()
+                    .map(ClientAccount::getId)
+                    .toList();
+        }
+        return Collections.emptyList();
+    }
+
+    @Named("accountList")
+    public static List<Account> seListAccount(List<Account> accounts) {
+        if (accounts == null) {
+            return Collections.emptyList();
+        }
+        return accounts;
     }
 
 }
